test/langtools/tools/javac/dslblocks/DslBlockNeg03.out
DslBlockNeg03.java:21:24: compiler.err.cant.resolve.location: kindname.method, stringArray, , , (compiler.misc.location: kindname.class, DslBlockNeg03, null)
DslBlockNeg03.java:26:22: compiler.err.cant.resolve.location: kindname.method, intArray, , , (compiler.misc.location: kindname.class, DslBlockNeg03, null)
2 errors
